# pythonFDTD

./: CMakeLists.txt  README.md  ToyFDTD1.c  ToyFDTD1.cc  ToyFDTD1.h  app.py  main.py  pythonFDTD.cc  setup.py  spam.c  tryf.py
gm/: Thread.cc  Thread.h
